bdr.BDR2.scala.error
Compilation error:
BDR2:15: error: '=>' expected but '}' found.
} 
^